--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
     "vue": "^3.5.13",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
