--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "mitt": "^3.0.1",
     "vue": "^3.5.13",
     "vue-the-mask": "^0.11.1",
     "vuetify": "^3.8.1"
