--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,9 @@
     "module": "esnext",
     "baseUrl": "./",
     "moduleResolution": "bundler",
+    "types": [
+      "vue3-toastify/global"
+    ],
     "paths": {
       "@/*": [
         "src/*"
