--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mitt": "^3.0.1",
     "vue": "^3.5.13",
     "vue-the-mask": "^0.11.1",
+    "vue3-toastify": "^0.2.8",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
